Refactored Drawer component to isolation. Fixed layout bug: drawer div lay on top of page in an inactive (invisible) state after a toggle.
ContactPage layout partly finished.

--- a/src/containers/ContactPage/ContactPage.scss
+++ b/src/containers/ContactPage/ContactPage.scss
@@ -1,2 +1,123 @@
 .contact-page {
+  display: flex;
+  background-color: $darkShade-color;
+  justify-content: center;
+  width: 100%;
+  min-height: 960px;
+  max-height: fit-content;
+  font-family: $primary-font;
+
+  @media only screen and (max-width: 500px) {
+    .content-wrapper {
+      background-color: $lightShade-color;
+
+      .page-title {
+        font-size: 28px;
+        margin-top: 40px;
+      }
+
+      .form-wrapper {
+        margin-top: 40px;
+
+        .input-section {
+          margin: 5px 5px;
+
+          .input-title {
+            margin: 5px 5px;
+          }
+
+          .input-field {
+            margin: 5px 5px;
+          }
+
+          .submit-button {
+            margin: 5px 5px;
+          }
+        }
+      }
+    }
+  }
+
+  .content-wrapper {
+    display: flex;
+    align-content: center;
+    flex-direction: column;
+    flex: 0 1 1625px;
+    min-height: 960px;
+    max-height: fit-content;
+    background-color: $darkShade-darker-color;
+
+    .page-title {
+      font-weight: 300;
+      font-size: 32px;
+      text-align: center;
+      color: $lightShade-color;
+      margin: 0;
+      margin-top: 80px;
+    }
+
+    .form-wrapper {
+      display: flex;
+      flex-direction: column;
+      align-content: center;
+      height: fit-content;
+      flex: 0 1 490px;
+      margin-top: 80px;
+
+      .input-section {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: 100%;
+        height: fit-content;
+        margin: 10px 10px;
+
+        .input-title {
+          font-weight: 400;
+          font-size: 14px;
+          flex: 0 1 120px;
+          text-align: right;
+          color: $lightShade-color;
+          margin: 10px 10px;
+        }
+
+        .input-field {
+          background-color: $lightShade-color;
+          font-size: 14px;
+          border: $lightAccent-color solid 1px;
+          border-radius: 5px;
+          box-shadow: inset 0 0 10px $lightAccent-color;
+          height: 35px;
+          flex: 0 1 420px;
+          max-width: 420px;
+          padding: 0 10px;
+          margin: 10px 10px;
+        }
+
+        .message-field {
+          @extend .input-field;
+          height: 150px;
+        }
+      }
+
+      .submit-button {
+        height: 40px;
+        flex: 0 1 420px;
+        justify-self: right;
+        background-color: $primary-color;
+        border: $darkShade-color solid 1px;
+        margin: 10px 10px;
+
+        p {
+          text-align: center;
+          margin: 0 auto;
+          color: $darkShade-color;
+          font-size: 16px;
+          font-weight: 400;
+        }
+      }
+    }
+  }
 }
